restart Prometheus node exporter only on demand

--- a/playbooks/roles/setup/handlers/main.yaml
+++ b/playbooks/roles/setup/handlers/main.yaml
@@ -14,3 +14,11 @@
     state: restarted
     daemon_reload: true
     enabled: true
+
+- name: Restart Prometheus node exporter
+  listen: "restart Prometheus node exporter"
+  ansible.builtin.systemd:
+    name: "prometheus-node-exporter"
+    state: restarted
+    daemon_reload: true
+    enabled: true
