--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Restart Snowflake service
+- name: Restart Snowflake
   listen: "restart Snowflake"
   ansible.builtin.service:
     name: snowflake-proxy
