--- a/playbooks/roles/setup/tasks/base.yaml
+++ b/playbooks/roles/setup/tasks/base.yaml
@@ -64,9 +64,12 @@
     creates: /swapfile
     executable: /bin/bash
 
-- name: Set sysctl swappiness
+- name: Set sysctl base values
   ansible.posix.sysctl:
-    name: vm.swappiness
-    value: "5" # only use swap space when 95% or more of physical RAM is used up
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
     sysctl_file: /etc/sysctl.d/21tor-generic.conf
     sysctl_set: true
+  loop:
+    - { name: 'vm.swappiness', value: 5 } # only use swap space when 95% or more of physical RAM is used up
+    - { name: 'kernel.sysrq', value: 0 }
