override Snowflake Debian systemd unit file

--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -11,6 +11,10 @@
       owner: root
       group: root
       mode: "0644"
+    ansible.builtin.file:
+      owner: root
+      group: root
+      mode: "0755"
   block:
     - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
