--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -33,3 +33,9 @@
     mode: a+x
     remote_src: yes
   notify: "restart Snowflake"
+
+- name: Add systemd unit
+  ansible.builtin.template:
+    src: snowflake-proxy.service.j2
+    dest: /etc/systemd/system/snowflake-proxy.service
+  notify: "restart Snowflake"
