--- a/playbooks/roles/setup_snowflake/tasks/snowflake-debian.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-debian.yaml
@@ -5,3 +5,14 @@
     name:
       - snowflake-proxy
   notify: "restart Snowflake"
+
+- name: Ensure that the override dir exists
+  ansible.builtin.file:
+    path: /etc/systemd/system/snowflake-proxy.service.d/
+    state: directory
+
+- name: Configure restart-on-failure
+  ansible.builtin.copy:
+    src: override.conf
+    dest: /etc/systemd/system/snowflake-proxy.service.d/
+  notify: "restart Snowflake"
