--- a/playbooks/roles/info_tor/tasks/bridgeline.yaml
+++ b/playbooks/roles/info_tor/tasks/bridgeline.yaml
@@ -1,11 +1,6 @@
 ---
-- name: Get fingerprint
-  changed_when: false
-  ansible.builtin.command: cut -f 2 -d ' ' /var/lib/tor/fingerprint
-  register: _fingerprint
-  failed_when: (_fingerprint.stdout_lines | length != 1) or (_fingerprint.stderr_lines | length > 0)
-
 - name: Get certificate
+  when: bridge_distribution
   changed_when: false
   ansible.builtin.command: grep -Eo 'cert=\S+' /var/lib/tor/pt_state/obfs4_bridgeline.txt
   register: _cert
@@ -15,9 +10,8 @@
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
-    line: "Bridge obfs4 {{ '%41s' | format(item) }}:{{ '%-5s' | format(obfs4_port) }} {{ _fingerprint.stdout_lines[0] }} {{ _cert.stdout_lines[0] }} iat-mode=0  # {{ inventory_hostname }}"
+    line: "Bridge obfs4 {{ '%41s' | format(item) }}:{{ '%-5s' | format(tor_port) }} {{ _fingerprint }} {{ _cert.stdout_lines[0] }} iat-mode=0  # {{ inventory_hostname }}"
     path: /tmp/{{ group_names[0] }}_bridgeline
-    create: yes
     mode: "0600"
   with_items:
     - "{{ ansible_facts.default_ipv4.address }}"
