--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -1,69 +1,71 @@
 ---
-- name: Create tmp dir
-  run_once: true
-  ansible.builtin.file:
-    path: "{{ tmp_dir }}"
-    state: directory
-    mode: "0755"
+- name: Main
+  module_defaults:
+    ansible.builtin.lineinfile:
+      create: yes
+  block:
+    - name: Get fingerprints
+      ansible.builtin.import_tasks: fingerprints.yaml
+      tags:
+        - bridgeline
+        - bto
+        - onionoo
+        - wellknown
 
-- name: Set hashed-fingerprint
-  ansible.builtin.import_tasks: hashed-fingerprint.yaml
-  tags:
-    - bto
-    - onionoo
-    - wellknown
+    - name: Bridge line
+      when: bridge_distribution
+      ansible.builtin.import_tasks: bridgeline.yaml
+      tags:
+        - never
+        - bridgeline
 
-- name: Bridge line
-  ansible.builtin.import_tasks: bridgeline.yaml
-  tags:
-    - never
-    - bridgeline
+    - name: Bto
+      when: bridge_distribution
+      ansible.builtin.import_tasks: bto.yaml
+      tags:
+        - bto
 
-- name: Bto
-  ansible.builtin.import_tasks: bto.yaml
-  tags:
-    - bto
+    - name: Clients
+      when: bridge_distribution
+      ansible.builtin.import_tasks: clients.yaml
+      tags:
+        - clients
 
-- name: Clients
-  ansible.builtin.import_tasks: clients.yaml
-  tags:
-    - clients
+    - name: Log
+      ansible.builtin.import_tasks: log-notice.yaml
+      tags:
+        - log
+        - log-notice
 
-- name: Log
-  ansible.builtin.import_tasks: log-notice.yaml
-  tags:
-    - log
-    - log-notice
+    - name: Log warn
+      ansible.builtin.import_tasks: log-warn.yaml
+      tags:
+        - log
+        - log-warn
 
-- name: Log warn
-  ansible.builtin.import_tasks: log-warn.yaml
-  tags:
-    - log
-    - log-warn
+    - name: Log err
+      ansible.builtin.import_tasks: log-err.yaml
+      tags:
+        - log
+        - log-err
 
-- name: Log err
-  ansible.builtin.import_tasks: log-err.yaml
-  tags:
-    - log
-    - log-err
+    - name: Onionoo
+      when: bridge_distribution
+      ansible.builtin.import_tasks: onionoo.yaml
+      tags:
+        - onionoo
 
-- name: Onionoo
-  ansible.builtin.import_tasks: onionoo.yaml
-  tags:
-    - onionoo
+    - name: Uptime
+      ansible.builtin.import_tasks: uptime.yaml
+      tags:
+        - uptime
 
-- name: Uptime
-  ansible.builtin.import_tasks: uptime.yaml
-  tags:
-    - uptime
+    - name: Version of Tor
+      ansible.builtin.import_tasks: version.yaml
+      tags:
+        - version
 
-- name: Version of Tor
-  ansible.builtin.import_tasks: version.yaml
-  tags:
-    - version
-
-- name: Wellknown
-  ansible.builtin.import_tasks: wellknown.yaml
-  tags:
-    - never
-    - wellknown
+    - name: Wellknown
+      ansible.builtin.import_tasks: wellknown.yaml
+      tags:
+        - wellknown
