add MyFamily logic for Tor relays

--- a/inventory/group_vars/tor.yaml
+++ b/inventory/group_vars/tor.yaml
@@ -14,6 +14,8 @@ torrc_config:
     value: "{{ log_warn }}"
   - name: "Log err file"
     value: "{{ log_err }}"
+  - name: "MyFamily"
+    value: "{{ my_family | default('') }}"
   - name: "Nickname"
     value: "{{ nickname | default('') }}"
   - name: "PublishServerDescriptor"
