--- a/playbooks/roles/setup/tasks/reboot-or-restart.yaml
+++ b/playbooks/roles/setup/tasks/reboot-or-restart.yaml
@@ -6,7 +6,7 @@
   register: _reboot_required
   notify: "reboot system"
 
-- name: Check if restart is needed (either kernel or a service)
+- name: Check if reboot is needed due to a (kernel and/or service) update
   when: not _reboot_required.changed
   changed_when: _reboot_needed.rc == 0
   failed_when: _reboot_needed.rc == 2
@@ -16,7 +16,7 @@
   register: _reboot_needed
   notify: "reboot system"
 
-- name: Restart services (no kernel) if needed
+- name: Restart service(s) if needed
   when: not _reboot_needed.changed
   changed_when: _services_restarted.stdout_lines is search('Restarting services...')
   ansible.builtin.shell:
@@ -24,9 +24,9 @@
       needrestart -b -r a
   register: _services_restarted
 
-- name: Reboot needed due to deferred service restarts
+- name: Check if a reboot is needed due to deferred service restart
   when: _services_restarted.changed
-  changed_when: _services_restarted is search('Service restarts being deferred:')
+  changed_when: _services_restarted.stdout_lines is search('Service restarts being deferred:')
   ansible.builtin.debug:
     var: _services_restarted.stdout_lines
     verbosity: 1
