--- a/playbooks/roles/setup/tasks/reboot-or-restart.yaml
+++ b/playbooks/roles/setup/tasks/reboot-or-restart.yaml
@@ -6,13 +6,13 @@
   register: _reboot_required
   notify: "reboot system"
 
-- name: Check if reboot is needed due to a (kernel and/or service) update
+- name: Check if reboot is needed due to a kernel update
   when: not _reboot_required.changed
   changed_when: _reboot_needed.rc == 0
   failed_when: _reboot_needed.rc == 2
   ansible.builtin.shell:
     cmd: |
-      needrestart -r l -b | grep -e 'NEEDRESTART-KSTA: 2' -e 'NEEDRESTART-KSTA: 3' -e 'NEEDRESTART-SVC'
+      needrestart -r l -b | grep -e 'NEEDRESTART-KSTA: 2' -e 'NEEDRESTART-KSTA: 3'
   register: _reboot_needed
   notify: "reboot system"
 
