--- a/playbooks/roles/setup/tasks/reboot-or-restart.yaml
+++ b/playbooks/roles/setup/tasks/reboot-or-restart.yaml
@@ -6,7 +6,7 @@
   register: _reboot_required
   notify: "reboot system"
 
-- name: Check if reboot is needed due to a kernel update
+- name: Check if a reboot is needed due to a kernel update
   when: not _reboot_required.changed
   changed_when: _reboot_needed.rc == 0
   failed_when: _reboot_needed.rc == 2
