--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -2,9 +2,8 @@
 additional_ports: []
 additional_software: []
 
-# for other kernels than provided by "stable"
-kernel_debian_target: "" # e.g. "experimental"
-kernel_debian_version: ""
+# use the backported kernel
+kernel_debian_backports: false
 
 kernel_git_version: "" # e.g. "HEAD" or "v6.7.3"
 kernel_git_patches: []
