--- a/playbooks/roles/setup/tasks/kernel-debian.yaml
+++ b/playbooks/roles/setup/tasks/kernel-debian.yaml
@@ -1,17 +1,17 @@
 ---
-- name: Configure repository "{{ kernel_debian_target }}"
+- name: Configure repository "backports"
   ansible.builtin.apt_repository:
-    filename: "{{ kernel_debian_target }}"
-    repo: "deb http://deb.debian.org/debian {{ kernel_debian_target }} main"
+    filename: backports
+    repo: "deb http://deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
 
-- name: Apt pinning for "{{ kernel_debian_target }}" kernel
+- name: Apt pinning for "backports" kernel
   ansible.builtin.copy:
     src: apt-preferences
     dest: /etc/apt/preferences
 
-- name: Install or update "{{ kernel_debian_target }}" kernel
+- name: Install or update "backports" kernel
   ansible.builtin.apt:
-    default_release: "{{ kernel_debian_target }}"
+    default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
-      - "linux-image-{{ kernel_debian_version }}-{{ ansible_facts.proc_cmdline.BOOT_IMAGE is search('-amd64') | ternary('amd64', 'arm64') }}-unsigned"
+      - "linux-image-{{ ansible_facts.proc_cmdline.BOOT_IMAGE is search('-amd64') | ternary('amd64', 'arm64') }}"
   notify: "reboot system"
