--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -75,7 +75,7 @@
         - never
 
     - name: metrics
-      when: metrics_port or prometheus_node_exporter
+      when: metrics_port | int > 0 or prometheus_node_exporter
       ansible.builtin.import_tasks: metrics.yaml
       tags:
         - metrics
@@ -87,7 +87,7 @@
         - prometheus-node-exporter
 
     - name: Kernel Debian
-      when: kernel_debian_target and kernel_debian_version
+      when: kernel_debian_backports
       ansible.builtin.import_tasks: kernel-debian.yaml
       tags:
         - kernel
