--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -13,20 +13,20 @@
         - wellknown
 
     - name: Bridge line
-      when: bridge_distribution
+      when: bridge_distribution | length > 0
       ansible.builtin.import_tasks: bridgeline.yaml
       tags:
         - never
         - bridgeline
 
     - name: Bto
-      when: bridge_distribution
+      when: bridge_distribution | length > 0
       ansible.builtin.import_tasks: bto.yaml
       tags:
         - bto
 
     - name: Clients
-      when: bridge_distribution
+      when: bridge_distribution | length > 0
       ansible.builtin.import_tasks: clients.yaml
       tags:
         - clients
@@ -50,7 +50,7 @@
         - log-err
 
     - name: Onionoo
-      when: bridge_distribution
+      when: bridge_distribution | length > 0
       ansible.builtin.import_tasks: onionoo.yaml
       tags:
         - onionoo
