--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -54,6 +54,7 @@
             - tor
 
         - name: Lyrebird
+          when: bridge_distribution | length > 0
           ansible.builtin.import_tasks: lyrebird.yaml
           tags:
             - lyrebird
