--- a/playbooks/roles/setup/tasks/kernel-debian.yaml
+++ b/playbooks/roles/setup/tasks/kernel-debian.yaml
@@ -5,6 +5,7 @@
     repo: "deb http://deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
 
 - name: Install or update "backports" kernel
+  when: not ansible_check_mode
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
