--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Restart Snowflake
+  when: not ansible_check_mode
   listen: "restart Snowflake"
   ansible.builtin.service:
     name: snowflake-proxy
