--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -29,7 +29,7 @@
   register: _tor_patched
 
 - name: Build Tor
-  when: _repo_tor.changed or _tor_patched.changed or true
+  when: not ansible_check_mode and (_repo_tor.changed or _tor_patched.changed)
   changed_when: true
   ansible.builtin.shell:
     cmd: |
