--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -29,6 +29,7 @@
       - dataEncipherment
 
 - name: Generate host certificate
+  when: not ansible_check_mode
   delegate_to: localhost
   community.crypto.x509_certificate:
     path: "{{ ssl_dir }}/certs/{{ inventory_hostname }}.crt"
@@ -38,12 +39,14 @@
     provider: ownca
 
 - name: Copy host key
+  when: not ansible_check_mode
   ansible.builtin.copy:
     src: "{{ ssl_dir }}/keys/{{ inventory_hostname }}.key"
     dest: /etc/nginx/conf.d/
   notify: "restart Nginx"
 
 - name: Copy host certificate
+  when: not ansible_check_mode
   ansible.builtin.copy:
     content: "{{
       lookup('file','{{ ssl_dir }}/certs/{{ inventory_hostname }}.crt')+'\n'+
