--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -26,6 +26,7 @@
     chdir: /root/lyrebird
 
 - name: Install Lyrebird
+  when: not ansible_check_mode
   ansible.builtin.copy:
     src: /root/lyrebird/lyrebird
     dest: /usr/bin/
