--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -65,6 +65,7 @@
         - config
 
     - name: Ensure that Tor is started
+      when: not ansible_check_mode
       ansible.builtin.service:
         name: tor.service
         state: started
