--- a/playbooks/roles/info_snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/uptime.yaml
@@ -17,5 +17,5 @@
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ inventory_hostname }} SFStart {{ _service.status.ExecMainStartTimestamp }} SFReload {{ _service.status.StateChangeTimestamp }} uptime {{ _result.stdout }}"
-    path: "{{ tmp_dir }}/{{ group_names[0] }}_uptime"
+    path: "{{ tmp_dir }}/snowflake_uptime"
     regex: "^{{ inventory_hostname }} "
