--- a/playbooks/roles/info/tasks/metrics.yaml
+++ b/playbooks/roles/info/tasks/metrics.yaml
@@ -5,5 +5,5 @@
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ inventory_hostname }}:{{ metrics_port }}"
-    path: "{{ tmp_dir }}/{{ group_names[0] }}_metrics_port"
+    path: "{{ tmp_dir }}/all_metrics_port"
     regex: "^{{ inventory_hostname }}:"
