--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -14,5 +14,5 @@
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ inventory_hostname }} {{ _proxy_version.stdout_lines[0] }}"
-    path: "{{ tmp_dir }}/{{ group_names[0] }}_version"
+    path: "{{ tmp_dir }}/snowflake_version"
     regex: "^{{ inventory_hostname }} "
