--- a/playbooks/roles/info_tor/tasks/bto.yaml
+++ b/playbooks/roles/info_tor/tasks/bto.yaml
@@ -13,5 +13,5 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.content | split('\n') | select('search', 'functional') | first | default('n/a n/a n/a') }}"
-    path: "{{ tmp_dir }}/{{ group_names[0] }}_bto"
+    path: "{{ tmp_dir }}/tor_bto"
     regex: "^{{ inventory_hostname }} "
