--- a/playbooks/roles/info_tor/tasks/uptime.yaml
+++ b/playbooks/roles/info_tor/tasks/uptime.yaml
@@ -16,5 +16,5 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} TorStart {{ _service.status.ExecMainStartTimestamp | default('n/a') }} TorReload {{ _service.status.StateChangeTimestamp | default('n/a') }} uptime {{ _result.stdout }}"
-    path: "{{ tmp_dir }}/{{ group_names[0] }}_uptime"
+    path: "{{ tmp_dir }}/tor_uptime"
     regex: "^{{ inventory_hostname }} "
